# senkaid

./: .gitignore  CMakeLists.txt  README.md  tree.sh
include/senkaid/backend/asm/: desc.txt
include/senkaid/backend/cpu/: desc.txt
include/senkaid/backend/cuda/: desc.txt
include/senkaid/backend/dispatch/: desc.txt
include/senkaid/backend/parallel/: desc.txt
include/senkaid/backend/rocm_hip/: desc.txt
include/senkaid/backend/simd/: desc.txt
include/senkaid/config/dispatch/: desc.txt
include/senkaid/config/flags/: desc.txt
include/senkaid/core/allocator/: alignment.hpp  desc.txt
include/senkaid/core/complex/: complex.hpp
include/senkaid/core/layout/: desc.txt
include/senkaid/core/matrix/: array.hpp  base.hpp  dense.hpp  desc.txt
include/senkaid/core/special/: desc.txt
include/senkaid/core/tensor/: desc.txt
include/senkaid/core/vector/: desc.txt
include/senkaid/engine/decompose/: desc.txt
include/senkaid/engine/optimize/: desc.txt
include/senkaid/engine/solver/: desc.txt
include/senkaid/engine/train/: desc.txt
include/senkaid/io/binary/: desc.txt
include/senkaid/io/csv/: desc.txt
include/senkaid/io/serialize/: desc.txt
include/senkaid/ops/ari/: desc.txt
include/senkaid/ops/broadcast/: desc.txt
include/senkaid/ops/linalg/: desc.txt
include/senkaid/ops/logical/: desc.txt
include/senkaid/ops/reduce/: desc.txt
include/senkaid/ops/transforms/: desc.txt
include/senkaid/traits/math_traits/: desc.txt
include/senkaid/traits/meta/: desc.txt
include/senkaid/traits/properties/: desc.txt
include/senkaid/utils/: root.hpp
include/senkaid/utils/config/: compiler.hpp  config_macros.hpp  config_selector.hpp  debug.hpp  defines.hpp  desc.txt  export.hpp  macros.hpp  platform.hpp  pragmas.hpp  root.hpp  selector.hpp  version.hpp
include/senkaid/utils/debug/: assert.hpp  desc.txt  dump.hpp  flags.hpp  logger.hpp  root.hpp  tools.hpp
include/senkaid/utils/macros/: desc.txt
include/senkaid/utils/memory/: arena.hpp  desc.txt  fallback.hpp  guard.hpp  pool.hpp  root.hpp  tracker.hpp  utils.hpp
include/senkaid/utils/types/: desc.txt
include/senkaid/views/block/: desc.txt
include/senkaid/views/flatten/: desc.txt
include/senkaid/views/slice/: desc.txt
include/senkaid/views/transpose/: desc.txt
src/: main.cpp
tests/: CMakeLists.txt
